* jargon-security - code for use with Spring security
* jargon-user-tagging - code for using free tagging and other metadata metaphors on top of iRODS
* jargon-transfer - transfer manager for managing and synchronizing data with iRODS
* jargon-ticket - support for ticket processing
* jargon-httpstream - stream http content into iRODS via Jargon

Other libraries are planned, such as connection pooling, as well as administrative functions.

==Requirements==

*Jargon depends on Java 1.6+
*Jargon is built using Apache Maven2, see POM for dependencies
*Jargon supports iRODS 2.4 through iRODS 3.0, and is tested with the current (as of release time) development version of iRODS

==Libraries==


Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]


==Bug Fixes==

* [#662] mod avu when setting a present units value to blank does not work - submitted as iRODS bug, added JUnit tests, will overhead if it becomes an issue
* [#677] strip quotes, commas from tags - user free tagging with quotes can cause pathological query behavior, standardize on space delimited, also parse out commas
* [#697] IRODSFileOutputStream overwrite fix - handle overwrites to match behavior of java io FileOutputStream (replace bytes)
* [#700] cdr errors multiple FITS processes writing to irods (added unit tests for multiple concurrent output stream writes..work in progress)

==Features==

 * [#664] parallel txfr optimization, including optional parallel via NIO
 * [#692] add ability to make parent dirs when creating a file for an IRODSFileOutputStream
 * [#114] support for mounted collections, cross zone browsing, and soft links
 ** Added tests and support for ACL operations across federated zones to support idrop interface operations